--- a/public/css/theme-red.css
+++ b/public/css/theme-red.css
@@ -1,4 +1,4 @@
-* {
+/* * {
     scrollbar-width: thin;
     scrollbar-color: #cb1b30 hsla(353, 77%, 45%, .1)
 }
@@ -164,7 +164,7 @@ a:hover {
     color: rgba(0, 0, 0, .8);
     -webkit-box-shadow: none;
     box-shadow: none
-}
+} */
 
 /*.heatmap-color-0{
     background-color:#703838
@@ -185,7 +185,7 @@ a:hover {
     background-color:#fd2b2b
 }*/
 
-.heatmap-color-0{
+/* .heatmap-color-0{
     background-color:#e6e0e0
 }
 
@@ -386,4 +386,4 @@ a:hover {
 
 .ui.segment .ui.tabular.menu .active.item, .ui.segment .ui.tabular.menu .active.item:hover {
     background: #efefef
-}
+} */
