--- a/public/css/theme-red.css
+++ b/public/css/theme-red.css
@@ -54,6 +54,7 @@
     /* --color-primary-alpha-70: rgba(205,4,28,0.7019607843137254); */
     /* --color-primary-alpha-80: rgba(205,4,28,0.8); */
     /* --color-primary-alpha-90: rgba(205,4,28,0.8823529411764706); */
+    --color-background: #fcfcfc;
 }
 
 /* body, footer {
