--- a/public/css/theme-red.css
+++ b/public/css/theme-red.css
@@ -75,3 +75,9 @@ span.green .svg {
 .repository .diff-detail-box {
     background: unset!important; /* make diff-detail-box background match --color-background */
 }
+
+details {
+    background-color: var(--color-secondary-light-2); /* make collapsible elements easier to distinguish from main body */
+	border-radius: 4px; /* same as code blocks */
+	padding: .2em .4em; /* same as code blocks */
+}
