--- a/public/css/theme-arc-red.css
+++ b/public/css/theme-arc-red.css
@@ -10,7 +10,7 @@
     --color-primary-dark-1: #93b373;
     --color-primary-dark-2: #c40319 !important; /* greater contributions heatmap and more (below) */
     --color-primary-dark-3: #b00317 !important; /* dropdown actions button */
-    --color-primary-dark-4: #a10315 !important; /* red buttons */
+    --color-primary-dark-4: #a10315 !important; /* red buttons and greater contributions heatmap */
     --color-primary-dark-5: #cfddc1;
     --color-primary-dark-6: #780310 !important; /* red buttons hover */
     --color-primary-dark-7: #f8faf6;
