--- a/public/css/theme-red.css
+++ b/public/css/theme-red.css
@@ -2,7 +2,7 @@
     --color-primary: #cd041c !important; /* greater contributions heatmap, primary email address label, Regenerate Scratch Token, and more (below) */
     --color-primary-dark-2: #ab0316 !important; /* greater contributions heatmap and more (below) */
     --color-primary-dark-3: #960314 !important; /* dropdown actions button */
-    --color-primary-dark-4: #870312 !important; /* red buttons */
+    --color-primary-dark-4: #870312 !important; /* red buttons and greater contributions heatmap */
     --color-primary-dark-6: #5f020d !important; /* red buttons hover */
     --color-primary-light-1: #d1152b !important; /* selection color */
     --color-primary-light-2: #ce2236 !important; /* greater contributions heatmap */
