--- a/public/css/theme-auto-red.css
+++ b/public/css/theme-auto-red.css
@@ -99,6 +99,10 @@
     .markup table tr:nth-child(2n) {
         background-color: unset !important; /* remove background color of alternating table rows, since distracting if such rows contain codes */
     }
+
+    .added-code {
+        background: unset !important; /* remove highlight behind some codes */
+    }
 }
 
 @media (prefers-color-scheme: dark) {
@@ -381,5 +385,9 @@
     
     .markup table tr:nth-child(2n) {
         background-color: unset !important; /* remove background color of alternating table rows, since distracting if such rows contain codes */
+    }
+
+    .added-code {
+        background: unset !important; /* remove highlight behind some codes */
     }
 }
