--- a/public/css/theme-auto-red.css
+++ b/public/css/theme-auto-red.css
@@ -11,7 +11,7 @@
         --color-primary-light-2: #ce2236 !important; /* greater contributions heatmap */
         --color-primary-light-4: #d54455 !important; /* greater contributions heatmap */
         --color-background: #fcfcfc !important; /* make some elements pop out more (below)  */
-        --color-secondary-alpha-70: #dedede4d !important; /* fewer contributions heatmap */
+        /* fewer contributions heatmap is okay */
         --fonts-monospace: ui-monospace, "Menlo", "Monaco", "Consolas", "Liberation Mono", "Courier New", monospace, var(--fonts-emoji) !important; /* replaced "SFMono-Regular" */
     }
     
@@ -157,8 +157,8 @@
         --color-secondary-alpha-30: #5257674b;
         --color-secondary-alpha-40: #52576766;
         --color-secondary-alpha-50: #52576780;
-        --color-secondary-alpha-60: #52576799;
-        --color-secondary-alpha-70: #f7dede1b !important; /* was #525767b3, fewer contributions heatmap */
+        --color-secondary-alpha-60: #52576799; /* new fewer contributions heatmap */
+        --color-secondary-alpha-70: #525767b3; /* old fewer contributions heatmap */
         --color-secondary-alpha-80: #525767cc;
         --color-secondary-alpha-90: #525767e1;
         --color-secondary-button: var(--color-secondary-dark-4);
